--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -9,7 +9,7 @@ import Container from "./Container.astro";
             <div class="flex flex-wrap items-center justify-between py-2 gap-6 md:py-4 md:gap-0 relative">
                 <input aria-hidden="true" type="checkbox" name="toggle_nav" id="toggle_nav" class="hidden peer">
                 <div class="relative z-20 w-full flex justify-between lg:w-max md:px-0">
-                    <a href="#home" aria-label="logo" class="flex space-x-2 items-center">
+                    <a href="/" aria-label="logo" class="flex space-x-2 items-center">
                         <div aria-hidden="true" class="flex space-x-1">
                             <!-- <div class="h-4 w-4 rounded-full bg-gray-900"></div> -->
                             <div class="h-6 w-2 bg-primary"></div>
@@ -53,7 +53,7 @@ import Container from "./Container.astro";
                                 </a>
                             </li>
                             <li>
-                                <a href="#blog" class="block md:px-4 transition hover:text-primary">
+                                <a href="#templates" class="block md:px-4 transition hover:text-primary">
                                     <span>Team</span>
                                 </a>
                             </li>
