--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -24,7 +24,7 @@ import Container from "./Container.astro"
                       >
                     </a>
                     <a
-                      href="#blogs"
+                      href="#templates"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 darkcancelbefore:border-gray-700 darkcancelbefore:bg-gray-800 sm:w-max"
                     >
                       <span
